[package]
name = "raycaster"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
libm = "0.2.*"
